@@ -1,3 +1,8 @@
+1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Widget.[hm]: Remove static typing from arguments to -setParent:,
+	+createParent: and from return values of -getParent and -getTopLevel.
+
 1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.
